// Vitest Snapshot v1

exports[`plugins/babel > should set babel-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "/Users/bytedance/code/modern.js/packages/builder/web-builder",
              {
                "not": /node_modules/,
              },
            ],
          },
          "/Users/bytedance/code/modern.js/packages/builder/web-builder/src/runtime/core-js-entry.js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "/Users/bytedance/code/modern.js/packages/builder/web-builder/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+plugin-transform-destructuring@7.18.6_@babel+core@7.18.6/node_modules/@babel/plugin-transform-destructuring/lib/index.js",
                  {
                    "loose": false,
                    "selectiveLoose": [
                      "useState",
                      "useEffect",
                      "useContext",
                      "useReducer",
                      "useCallback",
                      "useMemo",
                      "useRef",
                      "useImperativeHandle",
                      "useLayoutEffect",
                      "useDebugValue",
                    ],
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/builder/web-builder/built-in/babel-plugin-lock-corejs-version.ts",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/builder/web-builder/built-in/babel-plugin-ssr-loader-id.ts",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+plugin-transform-runtime@7.18.6_@babel+core@7.18.6/node_modules/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-function-bind/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+preset-env@7.18.6_@babel+core@7.18.6/node_modules/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": {
                      "proposals": true,
                      "version": "3",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": {
                      "node": "12",
                    },
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+preset-react@7.18.6_@babel+core@7.18.6/node_modules/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+preset-typescript@7.18.6_@babel+core@7.18.6/node_modules/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/babel > should set include/exclude 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          "src/**/*.js",
        ],
        "include": [
          {
            "and": [
              "/Users/bytedance/code/modern.js/packages/builder/web-builder",
              {
                "not": /node_modules/,
              },
            ],
          },
          "src/**/*.ts",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "/Users/bytedance/code/modern.js/packages/builder/web-builder/compiled/babel-loader",
            "options": {
              "babelrc": false,
              "compact": false,
              "configFile": false,
              "plugins": [
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+plugin-transform-destructuring@7.18.6_@babel+core@7.18.6/node_modules/@babel/plugin-transform-destructuring/lib/index.js",
                  {
                    "loose": false,
                    "selectiveLoose": [
                      "useState",
                      "useEffect",
                      "useContext",
                      "useReducer",
                      "useCallback",
                      "useMemo",
                      "useRef",
                      "useImperativeHandle",
                      "useLayoutEffect",
                      "useDebugValue",
                    ],
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/builder/web-builder/built-in/babel-plugin-lock-corejs-version.ts",
                  {
                    "metaName": "modern-js",
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/builder/web-builder/built-in/babel-plugin-ssr-loader-id.ts",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-macros/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-dynamic-import-node/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-import/index.js",
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                  "import-antd",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-lodash/index.js",
                  {},
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-decorators/index.js",
                  {
                    "legacy": true,
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+plugin-transform-runtime@7.18.6_@babel+core@7.18.6/node_modules/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "helpers": false,
                    "regenerator": true,
                    "useESModules": true,
                    "version": "7.18.6",
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-function-bind/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-export-default-from/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-pipeline-operator/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/@babel/plugin-proposal-partial-application/index.js",
                ],
                [
                  "/Users/bytedance/code/modern.js/packages/cli/babel-preset-base/compiled/babel-plugin-styled-components/index.js",
                  {
                    "displayName": true,
                    "pure": true,
                    "ssr": false,
                    "transpileTemplateLiterals": true,
                  },
                  "styled-components",
                ],
              ],
              "presets": [
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+preset-env@7.18.6_@babel+core@7.18.6/node_modules/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": false,
                    "corejs": undefined,
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": false,
                    "shippedProposals": false,
                    "targets": {
                      "node": "12",
                    },
                    "useBuiltIns": undefined,
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+preset-react@7.18.6_@babel+core@7.18.6/node_modules/@babel/preset-react/lib/index.js",
                  {
                    "development": true,
                    "runtime": "classic",
                    "useBuiltIns": true,
                    "useSpread": false,
                  },
                ],
                [
                  "/Users/bytedance/code/modern.js/node_modules/.pnpm/@babel+preset-typescript@7.18.6_@babel+core@7.18.6/node_modules/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                  },
                ],
              ],
            },
          },
        ],
      },
    ],
  },
}
`;
